# kc-framework

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/desktop-toolkit/: Cargo.toml  build.rs
crates/desktop-toolkit-updater/: Cargo.toml
crates/desktop-toolkit/src/: lib.rs  sidecar.rs  splash.rs  updater.rs
crates/desktop-toolkit/src/activation/: commands.rs  drive.rs  machine.rs  mod.rs  token.rs
crates/desktop-toolkit/src/ai/: client.rs  commands.rs  mod.rs  types.rs
docs/: ACTIVATION_SETUP.md  CONSUMING.md  activation.md  theme-system-preview.html
docs/codebase/: .codebase-scan.txt  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
preview/dashboard/: index.html  package.json  vite.config.js
preview/dashboard/src/: main.jsx
python/: pyproject.toml
python/chamber19_desktop_toolkit/: activation.py  auth.py
python/tests/: test_auth.py
scripts/: generate_key.py
tauri-template/src-tauri-base/: Cargo.toml.template
